tests/haste_namespaces/common/JsFlowConflict1.js.flow
declare const foo: string;
export default foo; // error: platform-specific impl file should conform to JsFlowConflict2.js.flow
